Rename UI /docs route to /documentation to free /docs for FastAPI API docs; update templates and navigation links accordingly

--- a/apps/ui/templates/base.html
+++ b/apps/ui/templates/base.html
@@ -35,7 +35,7 @@
             <li><a href="/" class="{% if current_page == 'landing' %}active{% endif %}">Home</a></li>
             <li><a href="/demonstrator"
                     class="{% if current_page == 'demonstrator' %}active{% endif %}">Demonstrator</a></li>
-            <li><a href="/docs" class="{% if current_page == 'docs' %}active{% endif %}">Docs</a></li>
+            <li><a href="/documentation" class="{% if current_page == 'documentation' %}active{% endif %}">Docs</a></li>
             <li><a href="/about" class="{% if current_page == 'about' %}active{% endif %}">About</a></li>
         </ul>
     </nav>
