--- a/apps/ui/templates/docs.html
+++ b/apps/ui/templates/docs.html
@@ -7,8 +7,8 @@
 <p>Welcome to the A3CP documentation.</p>
 
 <ul>
-    <li><a href="/docs/api">API Reference (placeholder)</a></li>
-    <li><a href="/docs/usage">Usage Guide (placeholder)</a></li>
-    <li><a href="/docs/deployment">Deployment Instructions (placeholder)</a></li>
+    <li><a href="/documentation/api">API Reference (placeholder)</a></li>
+    <li><a href="/documentation/usage">Usage Guide (placeholder)</a></li>
+    <li><a href="/documentation/deployment">Deployment Instructions (placeholder)</a></li>
 </ul>
 {% endblock %}
