new block content...page now working

--- a/apps/ui/templates/home.html
+++ b/apps/ui/templates/home.html
@@ -4,6 +4,18 @@
 
 {% block content %}
 
+{# Hero variables #}
+{% set hero_eyebrow = "GestureLabs · A3CP" %}
+{% set hero_title = "Open, ability-adaptive communication for people who cannot speak." %}
+{% set hero_subtitle = "The Ability-Adaptive Augmentative Communication Platform (A3CP) is an open-source initiative by
+GestureLabs in Berlin, developed with academic and clinical partners. Our goal is to make communication accessible for
+people who are not well served by current assistive-communication tools, by building technology that adapts to human
+ability rather than forcing individuals to adapt to rigid interfaces." %}
+{% set hero_primary_cta_label = "Learn more" %}
+{% set hero_primary_cta_href = "/about" %}
+{% set hero_secondary_cta_label = "Join us" %}
+{% set hero_secondary_cta_href = "/get-involved" %}
+
 {% include "components/_hero_section.html" %}
 
 
